err/sqlnomad.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlnomad'...
Compiling './lib/python3.5/site-packages/sqlnomad/custom_types.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/custom_types.py", line 30
    return f"{self.__class__.__name__}.{self.name}"
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlnomad/query.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/query.py", line 24
    _lineage: List[Tuple[Subquery, Optional[Subquery]]] = []
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlnomad/query_transformations.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/query_transformations.py", line 56
    raise TypeError(f"""
            {field.data_type!s} is not a valid data type for an 
            {aggregation!s} operation.
        """)
                        
                                                                
                                      
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlnomad/sql_field.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/sql_field.py", line 57
    return f"{self.definition} AS {self.alias}"
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlnomad/sql_filter.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/sql_filter.py", line 10
    field_alias: FieldDisplayName
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlnomad/storage_field.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/storage_field.py", line 10
    storage_name: FieldStorageName
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlnomad/storage_table.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/storage_table.py", line 59
    definition=f"{rebracket(self.alias)}.{rebracket(fld.display_name)}",
                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlnomad/subquery.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/subquery.py", line 23
    raise UserWarning(f"Duplicate field aliases found {duplicates}")
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlnomad/utils.py'...
***   File "./lib/python3.5/site-packages/sqlnomad/utils.py", line 13
    return f"[{new_str}]"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sqlnomad-0.1.05.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
